--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,15 @@
 cache/
 out/
 
+
+lib/
+
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+
+broadcast/
 
 # Docs
 docs/
